feat: rules 2.0
